# legal-charts-data

./: .gitignore  Makefile  README.md  conda.yml  data.dvc  pyproject.toml
.dvc/: config
config/: main.yaml
notebooks/: 1_compulsory_treatment_alcoholism.ipynb  2_0_dui_pl.ipynb  2_0_traffic _incidents_alcohol.ipynb  2_1_traffic _incidents_alcohol_pl.ipynb  2_1_traffic_accident_perpetrator_age_pl.ipynb  2_2_traffic_accident_perpetrator_age_pl.ipynb  3_0_class_actions_pl.ipynb  4_0_equal_treatment_pl.ipynb
src/: setup.py
src/database/: connect_db.py  create_ds_desc_table.py  insert_into_ds_desc.py  insert_topic.py
src/utils/: sns_pallete.py  upload_file_gpc.py  zip_folder.py
