[tool.poetry]
name = "legal-charts-data"
version = "0.1.0"
description = ""
authors = ["Tadeusz Miesowicz <contact@pozew.app>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "legal_charts_data" }]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
pandas = "^2.0.3"
ruff = "^0.0.280"
seaborn = "^0.12.2"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.2"
ipykernel = "^6.24.0"
mysqlclient = "^2.2.0"
openpyxl = "^3.1.2"
google-cloud-storage = "^2.10.0"
src = {path = "src"}
srca = {path = "src"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
